@@ -465,3 +465,4 @@ Issue #2226451 by johnv: Fixed workflow widget when creating a node, and only 1 
 Issue #2226781 by johnv: Changed Workflow Access page to use Entity UI.
 Issue #2226781 by johnv: Changed Workflow Clean up page to use Entity UI.
 Issue #2220065 by zihong0, johnv: Fixed workflow_access_node_access_records() is not called from node_save().
+Issue #2220065 by johnv: Fixed better filters WorkflowTransition->execute().
